// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: <Icon.File /> should render without issues 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 1em;
  height: 1em;
}

.c1 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
  position: absolute;
  bottom: -0.125em;
}

<span
  class="c0"
>
  <svg
    class="c1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"
    />
    <polyline
      points="13 2 13 9 20 9"
    />
  </svg>
</span>
`;

exports[`Component: <Icon.Folder /> should render without issues 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 1em;
  height: 1em;
}

.c1 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
  position: absolute;
  bottom: -0.125em;
}

<span
  class="c0"
>
  <svg
    class="c1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"
    />
  </svg>
</span>
`;

exports[`Component: <Icon.Home /> should render without issues 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 1em;
  height: 1em;
}

.c1 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
  position: absolute;
  bottom: -0.125em;
}

<span
  class="c0"
>
  <svg
    class="c1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
    <polyline
      points="9 22 9 12 15 12 15 22"
    />
  </svg>
</span>
`;

exports[`Component: <Icon.Icon /> should render without issues 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 1em;
  height: 1em;
}

.c1 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
  position: absolute;
  bottom: -0.125em;
}

<span
  class="c0"
>
  <svg
    class="c1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
</span>
`;

exports[`Component: <Icon.IconSvg /> should render without issues 1`] = `
.c0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  class="c0"
/>
`;

exports[`Component: <Icon.IconWrapper /> should render without issues 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 1em;
  height: 1em;
}

<span
  class="c0"
/>
`;

exports[`Component: <Icon.IdFile /> should render without issues 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 1em;
  height: 1em;
}

.c1 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
  position: absolute;
  bottom: -0.125em;
}

<span
  class="c0"
>
  <svg
    class="c1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"
    />
    <path
      d="M9.57,16c0,.08,0,.1-.1.1H8.32c-.08,0-.1,0-.1-.1V7.91c0-.07,0-.1.1-.1H9.48a.08.08,0,0,1,.09.09Z"
      fill="#000"
      stroke-width="0"
    />
    <path
      d="M15.75,14.9v-7s0-.06-.08-.06H14.45a.07.07,0,0,0-.07.08v2H14a3,3,0,0,0-3.08,3.2h0c0,2.09,1.19,3.12,2.85,3.12a4.59,4.59,0,0,0,2-.45s.06,0,.06-.08A7.15,7.15,0,0,1,15.75,14.9Zm-1.37-3.8v3.8a1.53,1.53,0,0,1-.54.09c-.86,0-1.55-.57-1.55-2,0-1.24.67-2,1.64-2a1.13,1.13,0,0,1,.45.08Z"
      fill="#000"
      stroke-width="0"
    />
  </svg>
</span>
`;

exports[`Component: <Icon.XCircle /> should render without issues 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 1em;
  height: 1em;
}

.c1 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
  position: absolute;
  bottom: -0.125em;
}

<span
  class="c0"
>
  <svg
    class="c1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="15"
      x2="9"
      y1="9"
      y2="15"
    />
    <line
      x1="9"
      x2="15"
      y1="9"
      y2="15"
    />
  </svg>
</span>
`;
